feat(gas): add attribute change listener and death handling
- Add GC_AttributeChangeTask for async attribute monitoring
- Implement health change detection and death handling in base character
- Add kill scoring event in attribute set post-effect execution
- Extend gameplay tags with death and kill events
- Refactor widget component for better attribute binding
- Add reset attributes functionality

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -267,6 +267,8 @@ ManualIPAddress=
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/GAS_Crash.CC_BaseCharacter",NewName="/Script/GAS_Crash.MyBaseCharacter")
 +ClassRedirects=(OldName="/Script/GAS_Crash.ABaseCharacter",NewName="/Script/GAS_Crash.MyBaseCharacter")
++FunctionRedirects=(OldName="/Script/GAS_Crash.GC_WidgetComponent.CBF_BindToAttributeChanges",NewName="/Script/GAS_Crash.GC_WidgetComponent.CBF_BindAllAttributesChanges")
++FunctionRedirects=(OldName="/Script/GAS_Crash.GC_WidgetComponent.CBF_BindAllAttributesChanges",NewName="/Script/GAS_Crash.GC_WidgetComponent.CBF_BindAllWidgetAttributesChanges")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
