--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,5 +1,4 @@
 ;METADATA=(Diff=true, UseCommands=true)
-
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -11,6 +10,8 @@ bDynamicReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagRedirects=(OldTagName="GCTags.Status.Death",NewTagName="GCTags.Status.Dead")
 +GameplayTagList=(Tag="GCTags.Events.Player.Primary",DevComment="Tag for the Primary Gamplay Abilities")
 +GameplayTagList=(Tag="GCTags.GCAbilities.Enemy.HitReact",DevComment="Tag for the Enemy HitReact")
++GameplayTagList=(Tag="GCTags.Status.Dead",DevComment="")
 
