--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -269,6 +269,7 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/GAS_Crash.ABaseCharacter",NewName="/Script/GAS_Crash.MyBaseCharacter")
 +FunctionRedirects=(OldName="/Script/GAS_Crash.GC_WidgetComponent.CBF_BindToAttributeChanges",NewName="/Script/GAS_Crash.GC_WidgetComponent.CBF_BindAllAttributesChanges")
 +FunctionRedirects=(OldName="/Script/GAS_Crash.GC_WidgetComponent.CBF_BindAllAttributesChanges",NewName="/Script/GAS_Crash.GC_WidgetComponent.CBF_BindAllWidgetAttributesChanges")
++ClassRedirects=(OldName="/Script/GAS_Crash.GC_BluePrintLiaray",NewName="/Script/GAS_Crash.GC_BluePrintLibrary")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
@@ -307,7 +308,8 @@ ManualIPAddress=
 +Profiles=(Name="Ragdoll",CollisionEnabled=QueryAndPhysics,bCanModify=False,ObjectTypeName="PhysicsBody",CustomResponses=((Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore)),HelpMessage="Simulating Skeletal Mesh Component. All other channels will be set to default.")
 +Profiles=(Name="Vehicle",CollisionEnabled=QueryAndPhysics,bCanModify=False,ObjectTypeName="Vehicle",CustomResponses=,HelpMessage="Vehicle object that blocks Vehicle, WorldStatic, and WorldDynamic. All other channels will be set to default.")
 +Profiles=(Name="UI",CollisionEnabled=QueryOnly,bCanModify=False,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility"),(Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Overlap),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap)),HelpMessage="WorldStatic object that overlaps all actors by default. All new custom channels will use its own default response. ")
-+EditProfiles=(Name="Pawn",CustomResponses=((Channel="Visibility")))
++EditProfiles=(Name="Pawn",CustomResponses=((Channel="Visibility"),(Channel="Camera",Response=ECR_Ignore)))
++EditProfiles=(Name="CharacterMesh",CustomResponses=((Channel="Camera",Response=ECR_Ignore)))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
